--- a/widget.html
+++ b/widget.html
@@ -2,7 +2,7 @@
 <div id="contain_moon" style="text-align:center;background-color:white;font-size:22px">
   <div style="font-weight:bold"></div>
   <div style="margin-bottom:-18px;padding:36px;filter:drop-shadow(0 0 36px hsl(220,100%,15%))"></div>
-  <div style="font-size:medium; font-family: Arial, sans-serif">.</div>
-  <div style="font-size:small; font-family: Arial, sans-serif">.</div>
+  <div style="font-size:medium; font-family: Tahoma, sans-serif">.</div>
+  <div style="font-size:small; font-family: Tahoma, sans-serif">.</div>
 </div>
 <script>(function(){var d=new Date().getDate();var m=document.querySelectorAll("#contain_moon div");var a=new XMLHttpRequest();var url="https://www.icalendar37.net/lunar/api/?lang=pt&month="+(new Date().getMonth()+1)+"&year="+(new Date().getFullYear())+"&size=120&lightColor=rgb(245,245,245)&shadeColor=rgb(113,111,111)&t&LDZ="+new Date(new Date().getFullYear(),new Date().getMonth(),1)/1000+"";m[1].style.height="120px";a.onreadystatechange=function(){if(a.readyState==4&&a.status==200){var b=JSON.parse(a.responseText);m[1].innerHTML=b.phase[d].svg;if(typeof moon_widget_loaded=="function")moon_widget_loaded(b);m[2].innerHTML=b.phase[d].npWidget;m[3].innerHTML=""+b.nextFullMoon}};a.open("GET",url,true);a.send()})()</script>
